@@ -2,14 +2,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <!--<repositories>-->
-        <!--<repository>-->
-            <!--<snapshots>-->
-                <!--<enabled>false</enabled>-->
-            <!--</snapshots>-->
-            <!--<id>central</id>-->
-            <!--<name>Central Repository</name>-->
-            <!--<url>http://repo.maven.apache.org/maven2</url>-->
-        <!--</repository>-->
+    <!--<repository>-->
+    <!--<snapshots>-->
+    <!--<enabled>false</enabled>-->
+    <!--</snapshots>-->
+    <!--<id>central</id>-->
+    <!--<name>Central Repository</name>-->
+    <!--<url>http://repo.maven.apache.org/maven2</url>-->
+    <!--</repository>-->
     <!--</repositories>-->
 
     <modelVersion>4.0.0</modelVersion>
@@ -23,8 +23,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <jersey.version>2.24.1</jersey.version>
-        <weld.version>2.2.0.SP1</weld.version>
+        <jersey.version>LATEST</jersey.version>
+        <weld.version>LATEST</weld.version>
         <dependency.scope>compile</dependency.scope>
         <hibernate.version>5.2.4.Final</hibernate.version>
     </properties>
@@ -36,39 +36,39 @@
             <version>5.0-alpha1</version>
         </dependency>
         <!--<dependency>-->
-            <!--<groupId>org.jboss.weld.servlet</groupId>-->
-            <!--<artifactId>weld-servlet</artifactId>-->
-            <!--<version>3.0.0.Alpha1</version>-->
+        <!--<groupId>org.jboss.weld.servlet</groupId>-->
+        <!--<artifactId>weld-servlet</artifactId>-->
+        <!--<version>3.0.0.Alpha1</version>-->
         <!--</dependency>-->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.6</version>
+            <version>LATEST</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-collections4</artifactId>
-            <version>4.1</version>
+            <version>LATEST</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.5</version>
+            <version>LATEST</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
-            <version>2.7</version>
+            <version>LATEST</version>
         </dependency>
         <dependency>
             <groupId>com.rabbitmq</groupId>
             <artifactId>amqp-client</artifactId>
-            <version>4.1.1</version>
+            <version>LATEST</version>
         </dependency>
         <dependency>
             <groupId>org.jgroups</groupId>
             <artifactId>jgroups</artifactId>
-            <version>4.0.0.Beta3</version>
+            <version>LATEST</version>
         </dependency>
 
         <!-- Consumer Dispatcher -->
@@ -76,12 +76,12 @@
         <dependency>
             <groupId>commons-beanutils</groupId>
             <artifactId>commons-beanutils</artifactId>
-            <version>1.8.3</version>
+            <version>LATEST</version>
         </dependency>
         <dependency>
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
-            <version>1.2</version>
+            <version>LATEST</version>
         </dependency>
         <dependency>
             <groupId>org.dom4j</groupId>
@@ -133,19 +133,19 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>20.0</version>
+            <version>LATEST</version>
         </dependency>
 
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
-            <version>7.0</version>
+            <version>LATEST</version>
             <scope>${dependency.scope}</scope>
         </dependency>
         <dependency>
             <groupId>javax.enterprise</groupId>
             <artifactId>cdi-api</artifactId>
-            <version>2.0.Alpha5</version>
+            <version>LATEST</version>
             <scope>${dependency.scope}</scope>
         </dependency>
         <dependency>
@@ -175,7 +175,7 @@
         <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
-            <version>1.10.2</version>
+            <version>LATEST</version>
         </dependency>
         <dependency>
             <groupId>org.glassfish.jersey.media</groupId>
@@ -227,7 +227,7 @@
         <dependency>
             <groupId>org.jboss.weld.environment</groupId>
             <artifactId>weld-environment-common</artifactId>
-            <version>2.2.14.Final</version>
+            <version>LATEST</version>
         </dependency>
     </dependencies>
     <build>
@@ -240,18 +240,16 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.7.0</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-
-                    <!--<compilerArguments>-->
-                    <!--<endorseddirs>${endorsed.dir}</endorseddirs>-->
-                    <!--</compilerArguments>-->
-                    <compilerArgument>-XDignore.symbol.file=true</compilerArgument>
-                    <!-- <executable>${env.JAVA_HOME_7}/bin/javac</executable> -->
-                    <!-- <bootclasspath>${env.JAVA_HOME}/lib/rt.jar</bootclasspath> -->
+                    <source>10</source>
+                    <target>10</target>
+                    <compilerArgs>
+                        <arg>--add-modules=java.xml.bind</arg>
+                        <arg>--add-modules=java.xml.ws.annotation</arg>
+                    </compilerArgs>
                 </configuration>
+
+                <version>3.7.0</version>
             </plugin>
             <plugin>
                 <artifactId>maven-antrun-plugin</artifactId>
@@ -264,10 +262,6 @@
                         </goals>
                         <configuration>
                             <tasks>
-                                <!-- dir="target/dispatcher-0.0.1" -->
-                                <!-- <copy file="target/dispatcher-0.0.1.war" todir="D:\server\jetty-distribution-9\webapps"> -->
-                                <!-- <fileset dir="target/dispatcher-0.0.1" /> -->
-                                <!-- </copy> -->
                             </tasks>
                         </configuration>
                     </execution>
